# vangers-web

./: CMakeLists.txt  Gemfile  README.md  _config.yml  index.md
.github/workflows/: vangers_em_build.yml  vangers_linux_build.yml  vangers_macos_build.yml  vangers_windows_32_build.yml  vangers_windows_64_build.yml
data/actint/: a_consts.h  a_str.inc  a_str1.inc  a_str2.inc  aci_iscr.inc  aci_ml.inc  aci_ml.scr  acs_main.inc  acsconst.h  actint.inc  escaves.inc  item_prm.inc  items.inc  main_h.inc  main_l.inc  mech_prm.inc  ml_data8.inc
data/data/: Podish.text  Rostrum.dil  Rostrum.query  Rostrum.text  room.lst
data/iscreen/: temp.scr
data/iscreen/scripts/: l8.inc  main.inc  mainmenu.scr  strings.inc  strings1.inc  strings2.inc  strings_BACKUP_72077.inc  strings_REMOTE_72126.inc
data/resource/iscreen/: oftr2.scb
lib/xgraph/: xgraph.h
lib/xtool/: port.h  xerrhead.cpp  xtcore.cpp
lib/xtool/iniparser/: iniparser.c
server/: CMakeLists.txt
src/: CMakeLists.txt  ai.cpp  ai.h  lang.h  network.cpp  network.h  road.cpp  zmod_common.h
src/3d/: 3dgraph.h  dynamics.cpp  optimize.cpp
src/actint/: a_consts.h  acsconst.h  actint.cpp  actint.h  ascr_fnc.cpp  item_api.h
src/iscreen/: i_chat.cpp  i_str.h  iextern.cpp  iscr_fnc.cpp  iscreen.cpp  iscreen_options.h
src/particle/: bmp2scr.cpp  df.cpp  partmap.cpp  partmap.h
src/sound/: hsound.h  music.cpp  sound.cpp
src/terra/: vmap.cpp
src/units/: effect.cpp  hobj.cpp  hobj.h  items.cpp  items.h  magnum.h  mechos.cpp  moveland.cpp  sensor.cpp  sensor.h
src/uvs/: diagen.cpp  diagen.h  univang.cpp  univang.h
surmap/: CMakeLists.txt  missed.cpp  sqexp.cpp  sqexp.h  surmap.cpp  world.cpp
surmap/libzip/: libzip.c
surmap/libzip/include/: libzip.h
surmap_data/: SURMAP.FNT
surmap_data/bitmap/: mage.pal  title.pal  vaga.pal
surmap_data/bitmap/mosaic/: stone.pal
surmap_data/idbfs/: LEVEL.IBM
surmap_data/idbfs/bitmap/: buka.pal
surmap_data/idbfs/shape3d/: conus.c3d  cylinder.c3d  elipsoid.c3d  piramid.c3d  sphere.c3d  square.c3d  tor.c3d  tube.c3d  u2.c3d
surmap_data/shape3d/: u1.c3d
surweb/: asset-manifest.json  index.html  package.json
surweb/public/: index.html
surweb/public/convert/: convert.d.ts  convert.js  convert_bg.wasm  convert_bg.wasm.d.ts
surweb/public/surmap/: bin.data.js  surmap.js  surmap.js.symbols  surmap.wasm
surweb/src/: config.ts  gen.tsx  index.tsx  landing.css  landing.tsx  ron.css  ron.tsx  router.tsx  surweb.css  surweb.tsx  xhr.ts  zip.tsx
surweb/static/css/: 2.0b6f037f.chunk.css  2.0b6f037f.chunk.css.map  main.ab4e50f4.chunk.css  main.ab4e50f4.chunk.css.map  main.ea1bcf7d.chunk.css  main.ea1bcf7d.chunk.css.map  main.f541d710.chunk.css  main.f541d710.chunk.css.map
surweb/static/js/: 2.a51a33f6.chunk.js  2.a51a33f6.chunk.js.map  2.be1368c3.chunk.js  2.be1368c3.chunk.js.map  2.be85ad7c.chunk.js  2.be85ad7c.chunk.js.map  main.0c416da7.chunk.js  main.0c416da7.chunk.js.map  main.59157f9b.chunk.js  main.59157f9b.chunk.js.map  main.8fc833dd.chunk.js  main.8fc833dd.chunk.js.map  main.999b4504.chunk.js  main.999b4504.chunk.js.map  main.c1763b64.chunk.js  main.c1763b64.chunk.js.map  runtime-main.24c7f180.js  runtime-main.24c7f180.js.map  runtime-main.b91b0285.js  runtime-main.b91b0285.js.map
surweb/surmap/: bin.data.js  surmap.js  surmap.js.symbols  surmap.wasm
vange-rs/: road.d.ts  road.js  road_bg.wasm.d.ts  tailwind.config.js
vange-rs/assets/: road.css
